# ml-dev-bench

./: .env.runtime.template  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: new_evaluation_task.yml
.github/PULL_REQUEST_TEMPLATE/: new_evaluation_task.md
.github/workflows/: pytest.yml
agents/: utils.py
agents/aide_agent/: Dockerfile  simple_aide.py
agents/aide_ml_agent/: __init__.py  aide_with_solution_helper.py  simple_aide.py  solution_helper.py
agents/codex_agent/: __init__.py  agent.py
agents/cursor_agent/: __init__.py  agent.py
agents/openhands_agent/: Dockerfile  README.md  __init__.py  agent.py  utils.py
agents/openhands_harbor_agent/: __init__.py  agent.py
agents/react_agent/: Dockerfile  __init__.py  simple_react.py
calipers/: logger.py
calipers/agents/react_agent/: simple_react.py
calipers/callbacks/litellm_callbacks/: metrics_callback.py
calipers/config_examples/: category_filter_task_eval.yaml  cursor_cifar10_eval.yaml  specific_task_eval.yaml
calipers/framework/: __init__.py  base.py  config.py  evaluation.py  registry.py
calipers/metrics/: __init__.py  base.py  standard.py
calipers/runtime/: ml_dev_bench_runtime.py
calipers/scripts/: run_evaluation.py  run_hydra_evaluation.py
calipers/tests/: pytest.ini
calipers/tests/integration/: test_array_generation.py
calipers/tests/integration/config/: array_generation_test.yaml  array_generation_test_oh_sonnet.yaml
calipers/tests/integration/tasks/: __init__.py  array_generation.py
calipers/tests/unit/: test_evaluation.py  test_litellm_callbacks.py  test_metrics.py  test_ml_dev_bench_runtime.py  test_run_evaluation.py
dev_config/python/: .pre-commit-config.yaml  ruff.toml
env/: .dockerignore  base.Dockerfile
ml_dev_bench/cases/api_integration/noisy_label_annotation/: __init__.py  noisy_label_eval.py  task.txt  test_labelbox_connection.py
ml_dev_bench/cases/api_integration/wandb_logging/: metrics.py  task.txt  wandb_logging_eval.py
ml_dev_bench/cases/dataset/dataset_download/: __init__.py
ml_dev_bench/cases/dataset/dataset_not_available_download/: __init__.py
ml_dev_bench/cases/dataset/dataset_preprocess/: __init__.py
ml_dev_bench/cases/dataset/noisy_dataset_download/: __init__.py  config.yaml  config_oh_sonnet.yaml  solution.sh  task.py  task.txt
ml_dev_bench/cases/debugging/bert_eval_debug/: __init__.py  config.yaml  config_aide_4o.yaml  config_oh_sonnet.yaml  solution.sh  task.py  task.txt
ml_dev_bench/cases/debugging/multi_file_fixes/: __init__.py  config.yaml  config_aide_4o.yaml  config_oh_sonnet.yaml
ml_dev_bench/cases/debugging/nan_losses/: __init__.py  config.yaml  config_aide_4o.yaml  config_oh_sonnet.yaml  nan_loss_task.py  solution.sh  task.txt
ml_dev_bench/cases/debugging/normalization_bug/: __init__.py  config.yaml  config_aide_4o.yaml  config_oh_sonnet.yaml  solution.sh  task.py  task.txt
ml_dev_bench/cases/debugging/vit_debugging/: .gitignore  __init__.py  solution.sh  task.py  task.txt
ml_dev_bench/cases/full_train_workflow_scratch/: __init__.py  config.yaml  task.py  task.txt
ml_dev_bench/cases/full_train_workflow_scratch/boolq_performance/: __init__.py  config.yaml  config_aide_4o.yaml  config_oh_sonnet.yaml  solution.sh  task.py  task.txt
ml_dev_bench/cases/full_train_workflow_scratch/cifar100_performance/: __init__.py  task.py  task.txt
ml_dev_bench/cases/hello_world/: __init__.py  hello_world_config.yaml  hello_world_config_openhands.yaml  hello_world_eval.py  solution.sh  task.txt
ml_dev_bench/cases/wandb_logging/: __init__.py  task.txt  wandb_logging_eval.py  wandb_logging_test.yaml  wandb_logging_test_oh_sonnet.yaml
ml_dev_bench/conf/: config.yaml
ml_dev_bench/conf/agent/: aide.yaml  codex.yaml  openhands.yaml  openhands_harbor_parity.yaml  react.yaml
ml_dev_bench/conf/task/: basic_vision_finetuning.yaml  bert_eval_debug.yaml  boolq_performance.yaml  channel_vit_implementation.yaml  channel_vit_implementation_easy.yaml  channel_vit_implementation_no_test.yaml  cifar100_performance.yaml  cifar_10_lt_performance.yaml  dataset_download.yaml  dataset_not_available_download.yaml  dataset_preprocess.yaml  full_train_workflow_performance_test.yaml  full_train_workflow_setup_test.yaml  hello_world.yaml  improve_cifar10_baseline.yaml  improve_segmentation_baseline.yaml  lora_implementation.yaml  mcts_implementation.yaml  mla_implementation.yaml  mla_implementation_hidden_tests.yaml  multi_gpu_training.yaml  nan_loss_debug.yaml  noisy_dataset_download.yaml  noisy_label_annotation.yaml  noisy_label_eval.yaml  normalization_bug.yaml  output_shape.yaml  parse_logs.yaml  performance_test.yaml  ppo_implementation.yaml  pretrained_bert_base_uncased_load.yaml  pretrained_model_load_from_torchvision.yaml  setup_test.yaml  setup_test_ambiguous.yaml  shape_mismatch_output.yaml  shape_mismatch_train.yaml  small_dataset_overfit.yaml  training_files_debug.yaml  var_implementation.yaml  vit_debugging.yaml  (+1 more)
multirun/2025-01-31_23-59-11/: multirun.yaml
multirun/2025-02-01_01-51-14/: multirun.yaml
multirun/2025-02-01_02-20-48/: multirun.yaml
multirun/2025-02-01_03-25-21/: multirun.yaml
multirun/2025-02-01_05-34-45/: multirun.yaml
multirun/2025-02-01_06-02-40/: multirun.yaml
multirun/2025-02-01_06-42-36/: multirun.yaml
notebooks/: TinyBertTrain.ipynb  react_agent_debug.ipynb
runtime/: registry.py  runtime.py
runtime/backends/: __init__.py  composio.py  interface.py
runtime/dependencies/: README.md  pyproject.toml
runtime/dependencies/wandb/: latest-run
runtime/dependencies/wandb/run-20250125_214034-lnnlp8kf/: run-lnnlp8kf.wandb
runtime/dependencies/wandb/run-20250125_214034-lnnlp8kf/files/: config.yaml
runtime/environments/: __init__.py  config.py  interface.py  runtime_env_vars_loader.py  shell_setup.py
runtime/tools/: function_tools.py
runtime/tools/filetool/: tool.py
runtime/tools/filetool/actions/: chwdir.py  (+2 more)
runtime/tools/shelltool/: tool.py
runtime/utils/: env_loader.py
scripts/: check_missing_tasks.py  eval.sh
workspace_improve_cifar10_baseline/: train_baseline.py
(+270 files in other folders)
