[tool.poetry]
name = "ml_dev_bench_runtime"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["MLDevBench"]

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "*"
notebook = "*"
jupyter_kernel_gateway = "*"
flake8 = "*"
torch = "2.2.2"
torchvision = "0.17.2"
torchaudio = "2.2.2"
torchmetrics = "1.3.1"
transformers = ">=4.0.0,<5.0.0"
timm = ">=0.6.0,<1.0.0"
kornia = "<0.8.0"
fastai = "<3.0.0"
accelerate = "*"
scikit-learn = ">=1.0.0,<2.0.0"
opencv-python = ">=4.5.0,<5.0.0"
lightning = "2.2.1"
wandb = "0.18.5"
openai = ">=1.0.0"
anthropic = ">=0.5.0"
streamlit = ">=1.24.0"
numpy = ">=1.23.0,<2.0.0"
matplotlib = "3.9.0"
pytest = ">=7.0.0,<8.0.0"
datasets = "*"
statsmodels = ">=0.14.0,<0.15.0"
pandas = ">=2.2.0,<2.3.0"
duckdb = ">=1.1.0"
lifelines = ">=0.27.0,<0.28.0"
scipy = ">=1.11.0,<2.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
